--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ php:
 before_script:
   - mkdir -p /tmp/plugins/dropbox
   - mv * /tmp/plugins/dropbox
-  - mkdir /tmp/ls && git clone git://github.com/stfalcon-studio/livestreet.git /tmp/ls
+  - mkdir /tmp/ls && git clone git://github.com/livestreet/livestreet.git /tmp/ls
   - cp -a /tmp/ls/* ./
   - cp /tmp/ls/.htaccess ./
   - mkdir -p plugins/dropbox && cp -a /tmp/plugins/dropbox/* plugins/dropbox
   - echo "dropbox" > ./plugins/plugins.dat
+
+  - cat ./plugins/plugins.dat
 
   # change application working folders for write access
   - chmod -R 0777 ./tmp
