travis ci + behat test 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ before_script:
   # download and launch Selenium
   - wget -O /tmp/selenium-server-standalone.jar http://selenium.googlecode.com/files/selenium-server-standalone-2.25.0.jar
   - java -jar /tmp/selenium-server-standalone.jar > /dev/null &
-  - sleep 5
 
+  - cat ../../plugins/dropbox/tests/behat/behat.yml
+  - sleep 5
 
 script: HTTP_APP_ENV=test cd tests/behat/ && php behat.phar --config='../../plugins/dropbox/tests/behat/behat.yml' --strict
