--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ before_script:
   - cp -a /tmp/ls/* ./
   - cp /tmp/ls/.htaccess ./
   - mkdir -p plugins/dropbox && cp -a /tmp/plugins/dropbox/* plugins/dropbox
-
-- echo "" > ./plugins/plugins.dat
-
+  - echo "#dropbox" > ./plugins/plugins.dat
   - cat ./plugins/plugins.dat
 
   # change application working folders for write access
