--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ before_script:
   - cp -a /tmp/ls/* ./
   - cp /tmp/ls/.htaccess ./
   - mkdir -p plugins/dropbox && cp -a /tmp/plugins/dropbox/* plugins/dropbox
-  - echo "#dropbox" > ./plugins/plugins.dat
-  - cat ./plugins/plugins.dat
+  - echo "dropbox" > ./plugins/plugins.dat
 
   # change application working folders for write access
   - chmod -R 0777 ./tmp
@@ -29,11 +28,13 @@ before_script:
   - cp ./config/config.test.php.dist config/config.test.php
   - cp ./config/config.test.php.dist config/config.local.php
   - sudo sed -i s/sql-mode/#sql-mode/ /etc/mysql/my.cnf
-  - sudo service mysql restart
+  - sudo /etc/init.d/mysql restart
   - sleep 5
 
   - rm -rf ./install
-  - wget -S http://livestreet.test/ -O /dev/null
+  - ls -la
+  - wget -S http://livestreet.test/ -O /tmp/dropbox_test.html
+  - cat /tmp/dropbox_test.html
 
   # start virtual display
   - sh -e /etc/init.d/xvfb start
@@ -42,10 +43,7 @@ before_script:
   # download and launch Selenium
   - wget -O /tmp/selenium-server-standalone.jar http://selenium.googlecode.com/files/selenium-server-standalone-2.25.0.jar
   - java -jar /tmp/selenium-server-standalone.jar > /dev/null &
-
-  - cd tests/behat/
-  - cat ../../plugins/dropbox/tests/behat/behat.yml
-  - cd ../../
   - sleep 5
+
 
 script: HTTP_APP_ENV=test cd tests/behat/ && php behat.phar --config='../../plugins/dropbox/tests/behat/behat.yml'
